--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
 h1 {
     color: #0974b3;
 }
-.nikola {
+.box {
     display: block;
     opacity: 0;
     position: absolute;
@@ -81,6 +81,6 @@ article:hover {
 .image:hover {
     filter: brightness(0.9);
 }
-.nikola:hover {
+.box:hover {
     opacity: 1;
 }
